--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         id="negativePrompt"
         rows="4"
       >
-worst quality, blurry, text, watermark, logo, banner, extra digits, cropped, jpeg artifacts, signature, username, error, sketch ,duplicate, ugly, monochrome, mutation, disgusting</textarea
+</textarea
       >
       <br />
       <label class="label-adv">Negative Prompt Template :</label>
