--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
         class="form-control bg-transparent text-light"
         id="negativePrompt"
         rows="4"
-      >
-</textarea
-      >
+      ></textarea>
       <br />
       <label class="label-adv">Negative Prompt Template :</label>
       <select id="negativeSelect" class="form-select bg-transparent text-light">
