--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <title>HuggingFace Generation</title>
+    <meta name="theme-color" content="#2a2a2a" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,16 +18,36 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
-
     <script type="module" src="./script.js"></script>
   </head>
   <body>
     <center>
-      <h2>Hugging Face Generator</h2>
+      <h2>Huggingface Generator</h2>
       <span class="slogan">text-to-image model</span>
     </center>
 
     <hr />
+    <div class="d-flex justify-content-end">
+      <span id="apikey"></span
+      ><button id="showApi" class="btn">
+        <i class="bi bi-eye-fill"></i>
+      </button>
+    </div>
+    <input
+      style="display: none"
+      id="inputApi"
+      placeholder="Access Token"
+      class="form-control-sm form-control bg-transparent text-light"
+    />
+    <span class="d-flex justify-content-end"
+      ><button
+        id="login"
+        style="display: none"
+        class="btn btn-primary login btn-sm"
+      >
+        Login
+      </button></span
+    >
     <center>
       <div class="d-flex justify-content-end">
         <span id="deleteAll">X</span>
@@ -213,6 +239,8 @@
     <!-- -->
     <br /><br />
 
-    <i><span class="helper text-warning">*</span> = Required</i>
+    <div class="d-flex justify-content-end">
+      <button id="deleteApi" class="btn btn-danger">Delete Your Api</button>
+    </div>
   </body>
 </html>
