--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       ><button
         id="login"
         style="display: none"
-        class="btn btn-primary login btn-sm"
+        class="btn btn-light login btn-sm"
       >
         Login
       </button></span
@@ -69,12 +69,12 @@
     </center>
 
     <br />
-    <button class="btn btn-primary" id="btn-generate">
+    <button class="btn btn-light" id="btn-generate">
       Run
       <span
         id="spinner"
         style="display: none"
-        class="spinner-border spinner-border-sm text-light"
+        class="spinner-border spinner-border-sm text-dark"
       ></span></button
     ><br />
     <span id="errorMsg"></span>
@@ -240,7 +240,9 @@
     <br /><br />
 
     <div class="d-flex justify-content-end">
-      <button id="deleteApi" class="btn btn-danger">Delete Your Api</button>
+      <button id="deleteApi" class="btn btn-sm btn-danger">
+        Delete Your Api
+      </button>
     </div>
   </body>
 </html>
