--- a/beta.html
+++ b/beta.html
@@ -87,7 +87,7 @@
     <div class="resultImg">
       <span clsss="resultText" style="opacity: 0.5">Result: </span><br />
       <div class="d-flex justify-content-center">
-        <img width="256px" height="auto" id="image" />
+        <img width="256px" height="auto" id="image" src="test.png"/>
       </div>
       <span
         class="opacity-50 d-flex justify-content-end"
