--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/favicon.svg" />
+    <script type="module" src="https://md-block.verou.me/md-block.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
@@ -18,7 +19,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./module/pintura.css" />
     <script type="module" src="./script.js"></script>
+    <script type="module" src="./module/pintura.js"></script>
+    <script type="module" src="./module/pinturaScript.js"></script>
   </head>
   <body>
     <center>
@@ -83,7 +87,7 @@
     <div class="resultImg">
       <span clsss="resultText" style="opacity: 0.5">Result: </span><br />
       <div class="d-flex justify-content-center">
-        <img width="256px" height="auto" id="image" />
+        <img width="256px" height="auto" id="image"/>
       </div>
       <span
         class="opacity-50 d-flex justify-content-end"
@@ -239,10 +243,23 @@
     <!-- -->
     <br /><br />
 
-    <div class="d-flex justify-content-end">
-      <button id="deleteApi" class="btn btn-sm btn-danger">
-        Delete Your Api
-      </button>
+    <div class="row">
+      <div class="col-8">
+        <md-block>
+          [![Donate -
+          Saweria](https://img.shields.io/badge/Donate-Saweria-2ea44f?style=for-the-badge)](https://saweria.co/mininxd)
+        </md-block>
+      </div>
+      <div class="col-4">
+        <button
+          style="font-size: 10px"
+          id="deleteApi"
+          class="btn btn-sm btn-danger"
+        >
+          Reset Access Token
+        </button>
+        <br />
+      </div>
     </div>
   </body>
 </html>
