--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <label class="label-adv">Model :</label>
       <br />
       <input
-        value=""
+        value="emilianJR/epiCRealism"
         class="text-light form-control bg-transparent"
         id="modelInput"
       />
